--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "league/csv": "9.0"
+        "league/csv": "9.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
