--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "league/csv": "9.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "tapp/laravel-airtable": "^0.21.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
